# gl-renderer

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
res/shaders/: basic.shader
src/: app.cpp
